--- a/lab2/lab02_datasaurus.Rmd
+++ b/lab2/lab02_datasaurus.Rmd
@@ -135,21 +135,27 @@ To find out more about the dataset, type the following in your Console: `?datasa
 
 ## <!-- 1.1 -->Based on the help file, how many rows and how many columns are in the data frame?
 
+> There are 1846 rows and 3 columns.
 
 
 
 ## <!-- 1.2 -->Based on the help file, what variables are included in the data frame? Use Markdown formatting to provide a bulleted list, with each variable typeset in monotype font.
 
-
++dataset
++x
++y
 
 
 ## <!-- 1.3 -->How many observations are in each dataset within this larger data frame? Let's make a *frequency table* of the of the `dataset` variable to find out. 
 > *Note 1*: The `kable()` function makes nicer looking tables when you knit. For quick "professional quality" pdf tables, add the argument `booktabs = TRUE`. Try knitting the document without piping the frequency table to `kable()`, with the pipe to `kable()`, and finally with the pipe to  `kable(booktabs = TRUE)` to see the differences.
 
+> There are 142 observations for each variable.
+
 ```{r dataset-freq}
 datasaurus_dozen %>% 
   count(dataset) %>% 
-  kable(booktabs = TRUE) 
+  kable(booktabs = TRUE) %>% 
+  kable_styling()
 ```
 
 
