--- a/lab2/lab02_datasaurus.Rmd
+++ b/lab2/lab02_datasaurus.Rmd
@@ -216,11 +216,29 @@ TIME TO KNIT & COMMIT: "Add answers to 2.1, 2.2"
 ## <!-- 2.3 -->Now calculate the correlation coefficient between `x` and `y` for the `star` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. How does this value compare to the correlation coefficient from the `dino` dataset?
 
 
+```{r dino-cor}
+# Start with `datasaurus_dozen`
+# Filter for observations where `dataset == "dino"`
+# Store the resulting filtered data frame as a new data frame called `dino_data`
+dino_data2 <- datasaurus_dozen %>%
+  filter(dataset == "star")
+
+# Compute correlation between `x` and `y` for `dino` dataset with label `r`
+dino_data %>%
+  summarize(r = cor(x, y))%>% 
+  kable(booktabs = TRUE) #%>% 
+  #kable_styling()
+```
 
 
 ## <!-- 2.4 -->Plot `y` versus `x` for the `star` dataset.  Does the plot look the same as the plot of the `dino` data?
 
+> Very cool! No, the points on the scatter plot are now in the shape of a star.
 
+```{r dino-plot, eval = TRUE, fig.width = 2.5, fig.height = 2}
+ggplot(data = dino_data2, mapping = aes(x = x, y = y)) +
+  geom_point()
+```
 
 
 <!-- 
