--- a/lab4/lab04_un-votes.Rmd
+++ b/lab4/lab04_un-votes.Rmd
@@ -184,7 +184,15 @@ KNIT & COMMIT & PUSH: "Add parts 1 and 2 answers"
 # <!-- 3 -->**Line types** The default line type for `geom_smooth()` is a solid line.  You can change the line type and thickness using the `lty = ` and `size = ` options, respectively, within the `geom_smooth()` function.  Copy and paste the code from your last figure in Part 2.3. Update the figure using the `aes()` function within `geom_smooth()` so that each country has a different line type. Can you also figure out how to clean up the legend?
 
 ```{r country-lines, fig.width = 6.5, fig.height = 3}
-
+ggplot(data = unvotes_hr, mapping = aes(x = year, y = percent_yes, 
+                                        color = country)) +
+  geom_point(aes(shape = country, color = country)) +
+  geom_smooth(aes(lty = country), method = "loess", se = FALSE) +
+  labs(title = "Percentage of 'Yes' votes  on human rights issues",
+       subtitle = "UN General Assembly, 1946 to 2019",
+       y = "% Yes",
+       x = "Year",
+       color = "country", lty = "country") #capitalization of the name matters 
 ```
 
 <!--
