--- a/problem set/ps1.Rmd
+++ b/problem set/ps1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Practice Set 1"
-author: "Your Name"
+author: "Kauila Tengan"
 date: "Due by 10pm ET on Friday"
 urlcolor: blue
 linkcolor: blue
